reduce map font size slightly to avoid line overflow

--- a/src/web/style/umbra-tags.less
+++ b/src/web/style/umbra-tags.less
@@ -177,7 +177,7 @@
       "Lucida Console",
       Terminal,
       monospace;
-    font-size: 13px;
+    font-size: 12px;
     margin-left: auto;
     margin-right: auto;
     display: inline-block;
